package edu.hitsz.application;

public enum Difficulty {
    EASY,
    NORMAL,
    HARD
}